--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "description": "",
   "dependencies": {
     "bootstrap": "^5.3.3",
+    "core-js": "^3.40.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
@@ -34,7 +35,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.2.0"
+    "gh-pages": "^6.2.0",
+    "webpack": "^5.97.1",
+    "webpack-cli": "^6.0.1"
   },
   "homepage": "https://denis9diaz.github.io/portfolio"
 }
